<resources>
    <string name="app_name">BaturaMobileTest</string>


    <string name="activity_contact">Contacto</string>
    <string name="activity_pokedex">Pokedex</string>
    <string name="activity_pokemon">Pokemon</string>


    <string  name="contact_name">Nombre:</string>
    <string  name="contact_surname">Apellido:</string>
    <string  name="contact_telephone">Telefono:</string>
    <string  name="contact_email">Email:</string>
    <string  name="contact_address">Dirección:</string>
    <string name="show_in_map">Mostrar en el mapa</string>

    <string translatable="false" name="contact_name_text">Unai</string>
    <string translatable="false" name="contact_surname_text">Correa</string>
    <string translatable="false" name="contact_telephone_text">+34677148268</string>
    <string translatable="false" name="contact_email_text">unai.correa.cruz@gmail.com</string>
    <string translatable="false" name="contact_address_text">Botica vieja 26 1F</string>
    
    <string translatable="false" name="contact_address_geo_point_lat">43.2684074</string>
    <string translatable="false" name="contact_address_geo_point_lng">-2.9492628</string>
    <string name="contact_address_geo_point_name">Casa</string>

    <string name="menu_contact">Contacto</string>
    <string name="menu_pokedex">Pokedex</string>


    <string name="pokemon_name">Nombre:</string>
    <string name="pokemon_type1">Tipo 1: </string>
    <string name="pokemon_type2">Tipo 2: </string>
</resources>
