<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/contact_bar_main"
    android:gravity="center"
    android:clickable="true">
    <RelativeLayout
        android:layout_height="match_parent"
        android:layout_width="wrap_content"
        android:layout_marginLeft="@dimen/margin"
        android:layout_marginRight="@dimen/margin"
        android:clickable="true">


        <ImageView
            android:src="@drawable/contact_name"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:id="@+id/imageView2"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="23dp" />

        <TextView
            android:text="@string/contact_name"
            android:textSize="@dimen/contact_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/imageView2"
            android:layout_toRightOf="@+id/imageView2"
            android:layout_toEndOf="@+id/imageView2"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:id="@+id/contact_main_name"
            android:textStyle="normal|bold" />

        <TextView
            android:text="@string/contact_name_text"
            android:textSize="@dimen/contact_title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/contact_main_name"
            android:layout_alignLeft="@+id/contact_main_name"
            android:layout_alignStart="@+id/contact_main_name"
            android:id="@+id/contact_main_name_text"
            android:layout_marginTop="5dp" />

        <TextView
            android:text="@string/contact_surname_text"
            android:textSize="@dimen/contact_title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/contact_main_surname"
            android:layout_alignLeft="@+id/contact_main_surname"
            android:layout_alignStart="@+id/contact_main_surname"
            android:id="@+id/contact_main_surname_text"
            android:layout_marginTop="5dp" />

        <TextView
            android:text="@string/contact_surname"
            android:textSize="@dimen/contact_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/contact_main_surname"
            android:textStyle="normal|bold"
            android:layout_marginTop="12dp"
            android:layout_below="@+id/contact_main_name_text"
            android:layout_alignLeft="@+id/contact_main_name_text"
            android:layout_alignStart="@+id/contact_main_name_text" />

        <TextView
            android:text="@string/contact_telephone"
            android:textSize="@dimen/contact_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/contact_main_telephone"
            android:layout_alignLeft="@+id/imageView2"
            android:layout_alignStart="@+id/imageView2"
            android:layout_marginTop="20dp"
            android:textStyle="normal|bold"
            android:layout_below="@id/imageView2" />

        <TextView
            android:text="@string/contact_telephone_text"
            android:textSize="@dimen/contact_title_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/contact_main_telephone_text"
            android:layout_alignBottom="@+id/contact_main_telephone"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_toEndOf="@+id/contact_main_telephone"
            android:layout_alignTop="@+id/contact_main_telephone"
            android:textAlignment="center"
            android:autoLink="phone"
            android:layout_toRightOf="@+id/contact_main_telephone"
            android:gravity="center" />

        <TextView
            android:text="@string/contact_email"
            android:textSize="@dimen/contact_title"
            android:layout_below="@id/contact_main_telephone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/contact_main_email"
            android:layout_alignLeft="@+id/contact_main_telephone"
            android:layout_alignStart="@+id/contact_main_telephone"
            android:textStyle="normal|bold" />

        <TextView
            android:text="@string/contact_email_text"
            android:textSize="@dimen/contact_title_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/contact_main_email_text"
            android:layout_alignBottom="@+id/contact_main_email"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_toEndOf="@+id/contact_main_email"
            android:layout_alignTop="@+id/contact_main_email"
            android:textAlignment="center"
            android:autoLink="email"
            android:layout_toRightOf="@+id/contact_main_email"
            android:gravity="center" />

        <TextView
            android:text="@string/contact_address"
            android:textSize="@dimen/contact_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/contact_main_email"
            android:layout_alignStart="@+id/contact_main_email"
            android:layout_below="@id/contact_main_email"
            android:id="@+id/contact_main_adreess"
            android:textStyle="normal|bold" />


        <TextView
            android:text="@string/contact_address_text"
            android:textSize="@dimen/contact_title_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/contact_main_adress_text"
            android:layout_alignBottom="@+id/contact_main_adreess"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_toEndOf="@+id/contact_main_adreess"
            android:layout_alignTop="@+id/contact_main_adreess"
            android:textAlignment="center"
            android:autoLink="email"
            android:layout_toRightOf="@+id/contact_main_adreess"
            android:gravity="center" />

        <Button
            android:text="@string/show_in_map"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/contact_main_adreess"
            android:layout_alignStart="@+id/contact_main_adreess"
            android:layout_below="@id/contact_main_adreess"
            android:id="@+id/contact_main_button_map"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp" />
    </RelativeLayout>
</ScrollView>